# research

./: .gitignore  README.md
SLAM/: ideas.txt
SLAM/resprj/: CMakeLists.txt  CMakeLists.txt~  generate.sh  plane2.pcd
SLAM/resprj/data/: src.pcd  tgt.pcd
SLAM/resprj/src/: CMakeLists.txt
SLAM/resprj/src/3dsift/: 3dsift.cpp  CMakeLists.txt
SLAM/resprj/src/keypointwithmask/: CMakeLists.txt  keypointwithmask.cpp
SLAM/resprj/src/multiICP/: CMakeLists.txt  multiICP.cpp
SLAM/resprj/src/plane_seg/: CMakeLists.txt  plane_seg.cpp
