# Empyt Project Template
# Xiang GAO, 2014.2

# Version required
CMAKE_MINIMUM_REQUIRED( VERSION 2.8 )

# Project Name
PROJECT( resprj )

# Basic Settings
SET(CMAKE_CXX_COMPILER "g++")
SET(CMAKE_CXX_FLAGS "")
SET(EXECUTABLE_OUTPUT_PATH ${PROJECT_SOURCE_DIR}/bin)
SET(LIBRARY_OUTPUT_PATH ${PROJECT_SOURCE_DIR}/lib)

# Debug Settings
SET( CMAKE_BUILD_TYPE Debug )

FIND_PACKAGE(PCL 1.7 REQUIRED )
INCLUDE_DIRECTORIES(${PCL_INCLUDE_DIRS})
LINK_DIRECTORIES(${PCL_LIBRARY_DIRS})
ADD_DEFINITIONS(${PCL_DEFINITIONS})

# Include directories
INCLUDE_DIRECTORIES( ${PROJECT_SOURCE_DIR}/include )

# Library directories
LINK_DIRECTORIES( ${PROJECT_SOURCE_DIR}/lib )

# Source directories
ADD_SUBDIRECTORY( ${PROJECT_SOURCE_DIR}/src )

FIND_PACKAGE( OpenCV REQUIRED )

